# NKU_cryptography

./: readme.md
CHB/Lab1/caesar/: attack  attack.cc  caesar  main.cc  utils.cc  utils.hh
CHB/Lab1/frequency_analysis/: main  main.cc
CHB/Lab1/substitution/: main  main.cc
CHB/Lab2/: CMakeLists.txt
CHB/Lab2/include/: des.hh
CHB/Lab2/src/: des.cc  main.cc
CHB/Lab3/: CMakeLists.txt  rsa.txt  test.py
CHB/Lab3/backup/: ZZ.hh
CHB/Lab3/include/: ZZ.hh  base64.hh  rsa.hh
CHB/Lab3/src/: main.cc  rsa.cc
CHB/Lab4/: CMakeLists.txt
CHB/Lab4/include/: ZZ.hh  base64.hh  md5.hh  utils.hh
CHB/Lab4/src/: main.cc  md5.cc
CHB/Lab5/: .md
FINAL/: readme.md
FINAL/代码以及可执行文件/: readme.md
FINAL/代码以及可执行文件/client/: AES.cpp  AES.h  BigInt.h  BigIntop.cpp  ClientRsa.txt  main.cpp  rsa.h
FINAL/代码以及可执行文件/server/: AES.cpp  AES.h  BigIntcal.cpp  BigIntdata.cpp  ClientPk.txt  ServerRsa.txt  genPrime.h  main.cpp  rsa.cpp
FINAL/代码以及可执行文件/密钥/: ServerPk.txt
FWX/1.classical/Project1/: Project1.sln  Project1.vcxproj  main.cpp
FWX/2.DES/: des密码实验测试数据.docx
FWX/5.DSA/: dsaseed.rnd  实验五数字签名算法DSA.doc
LXH/4.MD5/: 实验四 Hash函数MD5.doc
ZZ/: AES.cpp  AES.docx  AES.h  main.cpp
lab1/: CMakeLists.txt  main.cpp
作业2/作业要求/: test_data - 副本.h  test_data.h
作业3/作业要求/: rsaseed.rnd  实验三公钥密码算法RSA.doc
作业4/作业要求/: 实验四 Hash函数MD5.doc
作业5/1611519_周子祎_密码学第五次作业/: 1611519 周子祎 第五次报告 1.0.docx
实验2/文档/: all.vsdx  lab1.aux  lab1.toc  lab2.docx
实验3/实验三公钥密码算法RSA/: 实验三公钥密码算法RSA.doc
实验3/文档/: 1.vsdx  lab1.tex
实验4/MD5/: 雪崩.txt
实验4/文档/: lab1.aux  lab1.tex  lab1.toc
实验5/文档/: lab1.tex  lab4.docx
(+169 files in other folders)
